--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-tensorflow==2.15.0
-pandas
-numpy
-scikit_learn
+streamlit>=1.31.0
+tensorflow==2.20.0
+numpy==1.26.4
+pandas>=2.0.0
+scikit-learn>=1.3.0
 tensorboard
 matplotlib
-streamlit
 scikeras
