--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 streamlit>=1.31.0
-tensorflow==2.20.0
+tensorflow-cpu==2.20.0
 numpy==1.26.4
 pandas>=2.0.0
 scikit-learn>=1.3.0
-tensorboard
-matplotlib
-scikeras
+
+
+
+
+
+
+
